--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "python.pythonPath": "C:\\Users\\Jeremias Ferrao\\anaconda3\\envs\\botdev\\python.exe"
+    "python.pythonPath": "C:\\Users\\Jeremias Ferrao\\anaconda3\\envs\\botdev\\python.exe",
+    "cSpell.words": [
+        "animes",
+        "asyncio"
+    ]
 }
