--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-git+https://github.com/Rapptz/discord.py@rewrite
+discord
 dnspython==1.16.0
 PyNaCl==1.3.0
 async-timeout==3.0.1
@@ -6,4 +6,6 @@ requests
 wikipedia
 youtube_dl
 requests
-json
+colorlog
+discord.py[voice] ~= 1.4.0
+wolframalpha
