--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "python.pythonPath": "C:\\Users\\Jeremias Ferrao\\anaconda3\\envs\\botdev\\python.exe",
     "cSpell.words": [
         "animes",
-        "asyncio"
+        "asyncio",
+        "psycopg"
     ]
 }
